--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           </div>
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
-              <h4>MUI & Form Boiler Plate</h4>
+              <h4>MUI & Form Boiler Plate (In Porgress)</h4>
               <p class="text-black-50 mb-0">React Boiler plate mounted with Material UI, Redux Form / Formik, Redux State Management, Moment to quickly up and run with forms to dispatch JSON ready for HTTP Clent (Axios)</p>
             </div>
           </div>
@@ -105,7 +105,7 @@
               <div class="d-flex h-100">
                 <div class="project-text w-100 my-auto text-center text-lg-left">
                   <h4 class="text-white">Real Estate Application</h4>
-                  <p class="mb-0 text-white-50">User Management Application for Real Estate Company with an automation to retrieve User's/Property Information.</p>
+                  <p class="mb-0 text-white-50">User Management Application for Real Estate Company with an automation to retrieve User's/Property Information. Symfony Web Framework and <strong>Full Stack React</strong></p>
                   <hr class="d-none d-lg-block mb-0 ml-0">
                 </div>
               </div>
@@ -122,8 +122,8 @@
             <div class="bg-black text-center h-100 project">
               <div class="d-flex h-100">
                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                  <h4 class="text-white">Mountains</h4>
-                  <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
+                  <h4 class="text-white">Miscellaneous</h4>
+                  <p class="mb-0 text-white-50">Projects built on MERN, MEAN stack and Ruby on Rails</p>
                   <hr class="d-none d-lg-block mb-0 mr-0">
                 </div>
               </div>
@@ -194,16 +194,19 @@
               <a href="https://linkedin.com/in/anilrayamajhi/" class="mx-2" target='_blank'>
                 <i class="fab fa-linkedin-in"></i>
               </a>
+              <div class="mb-0 text-white-50">View my Linkedin</div>
             </div>
             <div class="social d-flex">
               <a href="https://www.figma.com/proto/WcL3Sx24uoo24SszOPmTb0qJ/Thing?node-id=0%3A1&scaling=scale-down&redirected=1" class="mx-2" target='_blank'>
                 <i class="fas fa-file-pdf"></i>
               </a>
+              <div class="mb-0 text-white-50">Resume Web Quick View</div>
             </div>
             <div class="social d-flex">
               <a href="https://github.com/anilrayamajhi" class="mx-2" target='_blank'>
                 <i class="fab fa-github"></i>
               </a>
+              <div class="mb-0 text-white-50">View @anilrayamajhi on GitHub</div>
             </div>
           </div>
           <div class="col-lg-4">
