--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="mx-auto text-center">
           <h1 class="mx-auto my-0 text-uppercase">Anil Rayamajhi</h1>
           <h2 class="text-white-50 mx-auto mt-2 mb-5">Full Stack Web Developer</h2>
-          <a href="#about" class="btn btn-primary mb-5">Resume PDF</a>
+          <a href="img/AnilRayamajhi_Resume.pdf" class="btn btn-primary mb-5" download >Resume PDF</a>
           <div class="mt-chevron">>
             <a href="#about" class="js-scroll-trigger"><i class="fas fa-chevron-down fa-3x"></i></a>
           </div>
