--- a/index.html
+++ b/index.html
@@ -1,35 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="img/favicon.ico" type="icon"/>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <link rel="icon" href="img/favicon.ico" type="icon" />
     <title>Anil Rayamajhi | Portfolio</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
     <!-- Custom fonts for this template -->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Varela+Round"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+      rel="stylesheet"
+    />
 
     <!-- Custom styles for this template -->
-    <link href="css/grayscale.min.css" rel="stylesheet">
-
+    <link href="css/grayscale.min.css" rel="stylesheet" />
   </head>
 
   <body id="page-top">
-
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
-          <img src="img/logo2.png" alt="" height="30">
+          <img src="img/logo2.png" alt="" height="40" />
         </a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <button
+          class="navbar-toggler navbar-toggler-right"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarResponsive"
+          aria-controls="navbarResponsive"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           Menu
           <i class="fas fa-bars"></i>
         </button>
@@ -39,7 +54,9 @@
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+              <a class="nav-link js-scroll-trigger" href="#projects"
+                >Projects</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#signup">Contact</a>
@@ -54,10 +71,15 @@
       <div class="container d-flex h-100 align-items-center">
         <div class="mx-auto text-center">
           <h1 class="mx-auto my-0 text-uppercase">Anil Rayamajhi</h1>
-          <h2 class="text-white-50 mx-auto mt-2 mb-5">Full Stack Web Developer</h2>
+          <h2 class="text-white-50 mx-auto mt-2 mb-5">
+            Full Stack Web Developer
+          </h2>
           <!-- <a href="img/arr.pdf" class="btn btn-primary mb-5" download="AnilRayamajhi_Resume" >Resume PDF</a> -->
-          <div class="mt-chevron">>
-            <a href="#about" class="js-scroll-trigger"><i class="fas fa-chevron-down fa-3x"></i></a>
+          <div class="mt-chevron">
+            >
+            <a href="#about" class="js-scroll-trigger"
+              ><i class="fas fa-chevron-down fa-3x"></i
+            ></a>
           </div>
         </div>
       </div>
@@ -67,7 +89,14 @@
     <section id="about" class="about-section text-center">
       <div class="row">
         <div class="col-lg-6 order-lg-1 order-2">
-          <iframe src="https://open.spotify.com/embed/user/goneinsanee/playlist/0RuwOU8l2l0RW0k2pjFxjJ" width="60%" height="100%" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+          <iframe
+            src="https://open.spotify.com/embed/user/goneinsanee/playlist/0RuwOU8l2l0RW0k2pjFxjJ"
+            width="60%"
+            height="100%"
+            frameborder="0"
+            allowtransparency="true"
+            allow="encrypted-media"
+          ></iframe>
           <!-- <iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3Apierrenel%3Aplaylist%teUwt0q7R2eHHuJl9rQpLw" width="60%" height="100%"></iframe> -->
         </div>
         <div class="col-lg-6 order-lg-1 order-1">
@@ -79,16 +108,23 @@
     <!-- Projects Section -->
     <section id="projects" class="projects-section bg-light">
       <div class="container">
-
         <!-- Featured Project Row -->
         <div class="row align-items-center no-gutters mb-4 mb-lg-5">
           <div class="col-xl-8 col-lg-7 mb-lg-5">
-            <img class="img-fluid mb-3 mb-lg-0" src="img/bg-masthead.jpg" alt="">
+            <img
+              class="img-fluid mb-3 mb-lg-0"
+              src="img/bg-masthead.jpg"
+              alt=""
+            />
           </div>
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
               <h4>MUI & Form Boiler Plate (In Porgress)</h4>
-              <p class="text-black-50 mb-0">React Boiler plate mounted with Material UI, Redux Form / Formik, Redux State Management, Moment to quickly up and run with forms to dispatch JSON ready for HTTP Clent (Axios)</p>
+              <p class="text-black-50 mb-0">
+                React Boiler plate mounted with Material UI, Redux Form /
+                Formik, Redux State Management, Moment to quickly up and run
+                with forms to dispatch JSON ready for HTTP Clent (Axios)
+              </p>
             </div>
           </div>
         </div>
@@ -96,15 +132,21 @@
         <!-- Project One Row -->
         <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
           <div class="col-lg-6">
-            <img class="img-fluid" src="img/demo-image-01.jpg" alt="">
+            <img class="img-fluid" src="img/demo-image-01.jpg" alt="" />
           </div>
           <div class="col-lg-6">
             <div class="bg-black text-center h-100 project">
               <div class="d-flex h-100">
-                <div class="project-text w-100 my-auto text-center text-lg-left">
+                <div
+                  class="project-text w-100 my-auto text-center text-lg-left"
+                >
                   <h4 class="text-white">Real Estate Application</h4>
-                  <p class="mb-0 text-white-50">User Management Application for Real Estate Company with an automation to retrieve User's/Property Information. Symfony Web Framework and <strong>Full Stack React</strong></p>
-                  <hr class="d-none d-lg-block mb-0 ml-0">
+                  <p class="mb-0 text-white-50">
+                    User Management Application for Real Estate Company with an
+                    automation to retrieve User's/Property Information. Symfony
+                    Web Framework and <strong>Full Stack React</strong>
+                  </p>
+                  <hr class="d-none d-lg-block mb-0 ml-0" />
                 </div>
               </div>
             </div>
@@ -114,21 +156,24 @@
         <!-- Project Two Row -->
         <div class="row justify-content-center no-gutters">
           <div class="col-lg-6">
-            <img class="img-fluid" src="img/demo-image-02.jpg" alt="">
+            <img class="img-fluid" src="img/demo-image-02.jpg" alt="" />
           </div>
           <div class="col-lg-6 order-lg-first">
             <div class="bg-black text-center h-100 project">
               <div class="d-flex h-100">
-                <div class="project-text w-100 my-auto text-center text-lg-right">
+                <div
+                  class="project-text w-100 my-auto text-center text-lg-right"
+                >
                   <h4 class="text-white">Miscellaneous</h4>
-                  <p class="mb-0 text-white-50">Projects built on MERN, MEAN stack and Ruby on Rails</p>
-                  <hr class="d-none d-lg-block mb-0 mr-0">
+                  <p class="mb-0 text-white-50">
+                    Projects built on MERN, MEAN stack and Ruby on Rails
+                  </p>
+                  <hr class="d-none d-lg-block mb-0 mr-0" />
                 </div>
               </div>
             </div>
           </div>
         </div>
-
       </div>
     </section>
 
@@ -136,10 +181,12 @@
     <section id="signup" class="signup-section">
       <div class="container">
         <div class="social text-right">
-          <img src="img/shooting.jpg" class="img-thumbnail rounded" alt="...">
+          <img src="img/shooting.jpg" class="img-thumbnail rounded" alt="..." />
           <h4 class="text-white">Home is where you hang your @.</h4>
-          <p class="mb-0 text-white-50"><i class="fas fa-minus"></i>  Anonymous</p>
-          <hr class="d-none d-lg-block mb-0 mr-0">
+          <p class="mb-0 text-white-50">
+            <i class="fas fa-minus"></i> Anonymous
+          </p>
+          <hr class="d-none d-lg-block mb-0 mr-0" />
         </div>
       </div>
     </section>
@@ -147,16 +194,16 @@
     <!-- Contact Section -->
     <section class="contact-section bg-black">
       <div class="container">
-
         <div class="row">
-
           <div class="col-md-4 mb-3 mb-md-0">
             <div class="card py-4 h-100">
               <div class="card-body text-center">
                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
                 <h4 class="text-uppercase m-0">Address</h4>
-                <hr class="my-4">
-                <div class="small text-black-50"><a href="maps:Los Angeles CA">Los Angeles CA</a></div>
+                <hr class="my-4" />
+                <div class="small text-black-50">
+                  <a href="maps:Los Angeles CA">Los Angeles CA</a>
+                </div>
               </div>
             </div>
           </div>
@@ -166,9 +213,13 @@
               <div class="card-body text-center">
                 <i class="fas fa-envelope text-primary mb-2"></i>
                 <h4 class="text-uppercase m-0">Email</h4>
-                <hr class="my-4">
+                <hr class="my-4" />
                 <div class="small text-black-50">
-                  <a href="mailto:anilrm07@gmail.com?Subject=You%20are%20hired!!" target="_top">anilrm07@gmail.com</a>
+                  <a
+                    href="mailto:anilrm07@gmail.com?Subject=You%20are%20hired!!"
+                    target="_top"
+                    >anilrm07@gmail.com</a
+                  >
                 </div>
               </div>
             </div>
@@ -179,8 +230,10 @@
               <div class="card-body text-center">
                 <i class="fas fa-mobile-alt text-primary mb-2"></i>
                 <h4 class="text-uppercase m-0">Phone</h4>
-                <hr class="my-4">
-                <div class="small text-black-50"><a href="tel:+13108955424">+1 (310) 895-5424</a></div>
+                <hr class="my-4" />
+                <div class="small text-black-50">
+                  <a href="tel:+13108955424">+1 (310) 895-5424</a>
+                </div>
               </div>
             </div>
           </div>
@@ -189,49 +242,68 @@
         <div class="social-wrapper justify-content-center row">
           <div class="col-lg-4 offset-lg-4">
             <div class="social d-flex">
-              <a href="https://linkedin.com/in/anilrayamajhi/" class="mx-2" target='_blank'>
+              <a
+                href="https://linkedin.com/in/anilrayamajhi/"
+                class="mx-2"
+                target="_blank"
+              >
                 <i class="fab fa-linkedin-in"></i>
               </a>
               <div class="mb-0 text-white-50">View my Linkedin</div>
             </div>
             <div class="social d-flex">
-              <a href="https://www.figma.com/proto/WcL3Sx24uoo24SszOPmTb0qJ/Thing?node-id=0%3A1&scaling=scale-down&redirected=1" class="mx-2" target='_blank'>
+              <a
+                href="https://www.figma.com/proto/WcL3Sx24uoo24SszOPmTb0qJ/Thing?node-id=0%3A1&scaling=scale-down&redirected=1"
+                class="mx-2"
+                target="_blank"
+              >
                 <i class="fas fa-file-pdf"></i>
               </a>
               <div class="mb-0 text-white-50">Resume Web Quick View</div>
             </div>
             <div class="social d-flex">
-              <a href="https://github.com/anilrayamajhi" class="mx-2" target='_blank'>
+              <a
+                href="https://github.com/anilrayamajhi"
+                class="mx-2"
+                target="_blank"
+              >
                 <i class="fab fa-github"></i>
               </a>
-              <div class="mb-0 text-white-50">View @anilrayamajhi on GitHub</div>
+              <div class="mb-0 text-white-50">
+                View @anilrayamajhi on GitHub
+              </div>
             </div>
           </div>
           <div class="col-lg-4">
             <a class="js-scroll-trigger" href="#about">
               <div class="social">
                 <h4 class="text-white">About</h4>
-                <p class="mb-0 text-white-50">Glimpse of Anil's skills, Resume and Music.🤪</p>
-                <hr class="d-none d-lg-block mb-0 ml-0">
+                <p class="mb-0 text-white-50">
+                  Glimpse of Anil's skills, Resume and Music.🤪
+                </p>
+                <hr class="d-none d-lg-block mb-0 ml-0" />
               </div>
             </a>
             <a class="js-scroll-trigger" href="#projects">
               <div class="social">
                 <h4 class="text-white">Project</h4>
-                <p class="mb-0 text-white-50">Complete Softwares development lifecycle, from Requirements defination, Wireframe design, Data structures, Front End Architecture through successful Deployment.</p>
-                <hr class="d-none d-lg-block mb-0 mr-0">
+                <p class="mb-0 text-white-50">
+                  Complete Softwares development lifecycle, from Requirements
+                  defination, Wireframe design, Data structures, Front End
+                  Architecture through successful Deployment.
+                </p>
+                <hr class="d-none d-lg-block mb-0 mr-0" />
               </div>
             </a>
             <a class="js-scroll-trigger" href="#signup">
               <div class="social">
                 <h4 class="text-white">Contact</h4>
                 <p class="mb-0 text-white-50">Contact Informations.</p>
-                <hr class="d-none d-lg-block mb-0 ml-0">
+                <hr class="d-none d-lg-block mb-0 ml-0" />
               </div>
             </a>
           </div>
         </div>
-
       </div>
     </section>
 
@@ -262,7 +334,5 @@
     <script src="jsD3/central-click.js"></script>
     <script src="jsD3/lines.js"></script>
     <script src="jsD3/index.js"></script>
-
   </body>
-
 </html>
