--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <section class="contact-section bg-black">
       <div class="container">
         <div class="row">
-          <div class="col-md-4 mb-3 mb-md-0">
+          <div class="col-md-6 mb-3 mb-md-0">
             <div class="card py-4 h-100">
               <div class="card-body text-center">
                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
@@ -208,7 +208,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 mb-3 mb-md-0">
+          <div class="col-md-6 mb-3 mb-md-0">
             <div class="card py-4 h-100">
               <div class="card-body text-center">
                 <i class="fas fa-envelope text-primary mb-2"></i>
@@ -225,7 +225,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 mb-3 mb-md-0">
+          <!-- <div class="col-md-4 mb-3 mb-md-0">
             <div class="card py-4 h-100">
               <div class="card-body text-center">
                 <i class="fas fa-mobile-alt text-primary mb-2"></i>
@@ -236,7 +236,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
 
         <div class="social-wrapper justify-content-center row">
